--- a/fastcampus/requirements.txt
+++ b/fastcampus/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 Django==4.0
 djangorestframework==3.13.1
 future==0.18.2
+mysqlclient==2.1.1
 pytz==2022.1
 serializers==0.2.4
 sqlparse==0.4.2
